Add macOS initialization instructions and a run script